--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react-native": "0.66.3",
     "react-native-calendar-picker": "^7.1.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-pager-view": "^5.4.9",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
     "react-native-svg": "^12.1.1",
+    "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.0.0",
     "styled-components": "^5.3.3",
     "styled-system": "^5.1.5"
