--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-screens": "^3.9.0",
     "react-native-svg": "^12.1.1",
     "react-native-tab-view": "^3.1.1",
+    "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^9.0.0",
     "styled-components": "^5.3.3",
     "styled-system": "^5.1.5"
