--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-calendar-picker": "^7.1.2",
+    "react-native-chart-kit": "^6.11.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-pager-view": "^5.4.9",
     "react-native-safe-area-context": "^3.3.2",
