--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
+    "axios": "^0.24.0",
     "moment": "^2.29.1",
     "native-base": "^3.2.2",
     "react": "17.0.2",
@@ -28,6 +29,11 @@
     "react-native-tab-view": "^3.1.1",
     "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^9.0.0",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.3",
     "styled-system": "^5.1.5"
   },
