--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
     "react-native-svg": "^12.1.1",
+    "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^9.0.0",
